# NeuroMesh

./: VERIFICATION_REPORT.md  flowos_full_design_v2.md
flowos/: .env.example  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
flowos/ai/: __init__.py  context_loader.py
flowos/ai/graphs/: __init__.py  code_review.py  fix_validation.py  research_planner.py
flowos/ai/tools/: __init__.py  artifact_tool.py  build_tool.py  git_tool.py  search_tool.py
flowos/api/: __init__.py  dependencies.py  main.py  ws_server.py
flowos/api/routers/: __init__.py  agents.py  checkpoints.py  events.py  handoffs.py  tasks.py  workflows.py
flowos/cli/: __init__.py  agent.py  main.py  workspace_manager.py
flowos/cli/commands/: __init__.py  ai.py  run.py  work.py  workflow.py  workspace.py
flowos/examples/: build_and_review.yaml  feature_delivery_pipeline.yaml  seed_data.py
flowos/infra/kafka/: topics.json
flowos/infra/postgres/: init.sql
flowos/observability/: __init__.py  audit_log.py  consumer.py  metrics.py
flowos/orchestrator/: __init__.py  worker.py
flowos/orchestrator/activities/: __init__.py  checkpoint_activities.py  handoff_activities.py  kafka_activities.py  task_activities.py  workspace_activities.py
flowos/orchestrator/dsl/: __init__.py  parser.py  validator.py
flowos/orchestrator/workflows/: __init__.py  base_workflow.py  build_and_review.py  feature_delivery.py
flowos/policy/: __init__.py  engine.py  evaluator.py
flowos/policy/rules/: __init__.py  approval_gates.py  branch_protection.py  machine_safety.py
flowos/shared/: __init__.py  config.py  git_ops.py
flowos/shared/db/: __init__.py  alembic.ini  base.py  models.py  session.py
flowos/shared/kafka/: __init__.py  admin.py  consumer.py  producer.py  schemas.py  topics.py
flowos/shared/models/: __init__.py  agent.py  checkpoint.py  event.py  handoff.py  reasoning.py  task.py  workflow.py  workspace.py
flowos/tests/: __init__.py  conftest.py  test_argo_client.py  test_artifact_uploader.py
flowos/tests/integration/: __init__.py  test_ai_worker.py  test_checkpoint_revert.py  test_kafka_fanout.py  test_machine_worker.py  test_task_handoff.py  test_workflow_lifecycle.py
flowos/workers/: __init__.py  ai_worker.py  argo_client.py  artifact_uploader.py  machine_worker.py
(+50 files in other folders)
